@@ -4,6 +4,7 @@
     fix maximized panel sliders not restored #402
     README, man: update kernel polling instructions #403
     look in applications subdirs for .desktop file; debug info #405
+    clear g_ascii_strcasecmp warning on owner sort
 0.9.2   2013-12-06:
     README correct packages link
     manual note full/max col widths not saved #382
